css/components/feature-card.css
.feature {
    display: flex;
    justify-content: center;
}
.feature__card-1 {
    max-width: 928px;
    width: 100%;
    height: auto;
    border-radius: 22px;
    background-color: #F4F4F4;  
    }

.feature__text {
    width: 50%;
    padding-right: 7rem;
    gap: 1rem;
}

.feature__image-wrapper {
    width: 50%;
}

.feature__image-1 {
    max-width: 464px;
    width: 100%;
    border-radius: 22px;
    object-fit: cover;
}


    /* Card 2*/

.feature__card-2 {
max-width: 454px;
width: 100%;
border-radius: 22px;
justify-content: space-between; 
}

.feature__card-2 {
    background-color: #F4F4F4;
    }

.feature__text-2 {
padding-right: 4rem;
gap: 1rem;
}

.feature__middle {
    align-items: stretch;
}

/* Card 3 */
.feature__3 {
    max-width: 928px;
    width: 100%;
}

.feature__card-3 {
    max-width: 718px;
    width: 100%;
    border-radius: 22px;
    justify-content: space-between; 
}

.feature__text-3 {
    padding: 20px 73px;
}

.feature__text-description-3 {
    font-size: 15.88px;
    line-height: 25.6px;
}

/* Payments Card */

.payments__container {
    max-width: 1360px;
    width: 100%;
    padding: 64px 20px;
    border-radius: 22px;
    background-color: #E0EBF4;
}

.payments {
    max-width: 1320px;
    width: 100%;
    gap: 64px;
}

.payments__text-description {        
    font-size: 17.44px;
    line-height: 21.6px;
}

.payments__image-content {
    max-width: 217px;
    width: 100%;
    padding: 47.5px 56px;
    margin: 12px 0px;
    border-radius: 100px;
}

.image-wrapper-1 {
    background-color: #635BFF;
}

.image-wrapper-2 { 
    background-color: #C9E8F5;
}

.image-wrapper-3 {
    background-color: #201515;
}

.image-wrapper-4 { 
    background-color: #FFD140;
}

.image-wrapper-5 {
    background-color: #FFFFFF;
    }

.payments__image-wrapper {
    padding: 0px 57.5px;
    flex-wrap: wrap;
}

.payments__image {
    max-width: 136px;
    width: 100%;
}

     
@media (max-width: 768px) {
    .feature__card-1,
    .feature__middle {
        flex-direction: column;
    }
    .feature__text,
    .feature__image-wrapper {
        width: 100%;
    }

    .feature__text,
    .feature__text-2 {
        text-align: center;
        padding-right: 0;
    }

    .feature__text-3 {
        padding: 0;
    }

}

